force-app/main/default/objects/Credit_Line__c/Credit_Line__c.object-meta.xml
<CustomObject>
    <label>Credit Line</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Credit Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credits Line</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>