force-app/main/default/objects/Credit_Line__c/fields/Credit_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Line_Type__c</fullName>
    <label>Credit Line Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>