force-app/main/default/objects/Credit_Line__c/fields/Currency_Credit_Line__c.field-meta.xml
<CustomField>
    <fullName>Currency_Credit_Line__c</fullName>
    <label>Currency Credit Line</label>
    <length>80</length>
    <type>Text</type>
</CustomField>