force-app/main/default/objects/Credit_Line__c/fields/Customer_account_ERP__c.field-meta.xml
<CustomField>
    <fullName>Customer_account_ERP__c</fullName>
    <externalId>true</externalId>
    <label>Customer_account_ERP</label>
    <length>200</length>
    <type>Text</type>
</CustomField>