force-app/main/default/objects/Credit_Line__c/fields/Custumer_Account__c.field-meta.xml
<CustomField>
    <fullName>Custumer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custumer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credits Line</relationshipLabel>
    <relationshipName>Credits_Line_del</relationshipName>
    <type>Lookup</type>
</CustomField>