force-app/main/default/objects/Credit_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Credit_Line_Type__c</columns>
    <columns>Custumer_Account__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Customer_account_ERP__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>